<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="copyright"></string>
    <string name="app_name">MCS</string>
    <string name="user_name">用户名:</string>
    <string name="user_pass">密码:</string>
    <string name="login">登录</string>

    <string name="title_login">用户登录</string>
    <string name="my_events">关注的事件</string>
    <string name="my_notifies">新闻通知</string>
    
    <string name="scan_barcode">二维码</string>
    <string name="scan_rfid">RFID</string>
    <string name="scan_manual">手动输入</string>
    
    <string name="home">首页</string>
    <string name="event">事件</string>
    <string name="place">地图</string>
    <string name="person">我的</string>
</resources>