<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:myradio="http://schemas.android.com/apk/res/com.tsdi.mcs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/background">

    <Spinner
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" 
        android:paddingBottom="1dp"/>

    
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_bottom_background"
        android:orientation="horizontal" >

        <com.tsdi.mcs.controls.MyRadioButton
            style="@style/main_tab_bottom"
            android:text="@string/home"
            myradio:drawableSize="@dimen/main_MyRadioButton_drawableSize"
            myradio:drawableTop="@drawable/home_btn" />

        <com.tsdi.mcs.controls.MyRadioButton
            style="@style/main_tab_bottom"
            android:text="@string/event"
            myradio:drawableSize="@dimen/main_MyRadioButton_drawableSize"
            myradio:drawableTop="@drawable/event_btn" />

        <ImageView
            android:id="@+id/scanButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:padding="@dimen/normal_spacing"
            android:scaleType="centerCrop"
            android:src="@drawable/crop_free_white"
            android:background="@color/scanButton_background"/>
       

        <com.tsdi.mcs.controls.MyRadioButton
            style="@style/main_tab_bottom"
            android:text="@string/place"
            myradio:drawableSize="@dimen/main_MyRadioButton_drawableSize"     
            myradio:drawableTop="@drawable/place_btn" />

        <com.tsdi.mcs.controls.MyRadioButton
            style="@style/main_tab_bottom"
            android:text="@string/person"
            myradio:drawableSize="@dimen/main_MyRadioButton_drawableSize"
            myradio:drawableTop="@drawable/person_btn" />
    </RadioGroup>

</LinearLayout>